@@ -2,6 +2,8 @@
  - add a debian watch file
  - add 'sudo' entry to ubuntu's default user (LP: #1080717)
  - fix resizefs module when 'noblock' was provided (LP: #1080985)
+ - make sure there is no blank line before cloud-init entry in
+   there are no blank lines in /etc/ca-certificates.conf (LP: #1077020)
 0.7.1:
  - sysvinit: fix missing dependency in cloud-init job for RHEL 5.6 
  - config-drive: map hostname to local-hostname (LP: #1061964)
